--- a/README.adoc
+++ b/README.adoc
@@ -60,9 +60,9 @@ the attributes that you will add in the two CORS configurations.
 
 ==== Simple CORS request
 
-According to the CORS specification, an HTTP request is a simple CORS request if the request 
-method is `GET`, `HEAD`, or `POST`. The header fields are any one of the `Accept`, 
-`Accept-Language`, `Content-Language`, or `Content-Type` headers. The `Content-Type` header 
+According to the CORS specification, an HTTP request is a simple CORS request if the request
+method is `GET`, `HEAD`, or `POST`. The header fields are any one of the `Accept`,
+`Accept-Language`, `Content-Language`, or `Content-Type` headers. The `Content-Type` header
 has a value of `application/x-www-form-urlencoded`, `multipart/form-data`, or `text/plain`.
 
 When clients, such as browsers, send simple CORS requests to servers on different domains, the clients include an
@@ -91,10 +91,13 @@ include::{common-includes}/gitclone.adoc[]
 == Enabling CORS
 Navigate to the `start` directory to begin.
 
-You will use a REST service that is already provided for you to test your CORS configurations. 
+[role='command']
+include::{common-includes}/devmode-start.adoc[]
+
+You will use a REST service that is already provided for you to test your CORS configurations.
 Find the service in the `src/main/java/io/openliberty/guides/cors/` directory.
 
-Send the simple request to the `/configurations/simple` endpoint and the preflight request 
+Send the simple request to the `/configurations/simple` endpoint and the preflight request
 to the `/configurations/preflight` endpoint.
 
 // =================================================================================================
@@ -130,20 +133,20 @@ The simple CORS configuration contains the following attributes:
 Save the changes to the [hotspot file=0]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
 
-Open the [hotspot file=1]`TestCors.java` file in the `src/test/java/it/io/openliberty/guides/cors/` directory.
+Open the [hotspot file=1]`CorsIT.java` file in the `src/test/java/it/io/openliberty/guides/cors/` directory.
 
-Now we will test the simple CORS configuration that you added. Add the [hotspot=25-33 file=1]`testSimpleCorsRequest` method to the `TestCors` class.
+Now we will test the simple CORS configuration that you added. Add the [hotspot=25-33 file=1]`testSimpleCorsRequest` method to the `CorsIT` class.
 
 [role="code_command hotspot file=1", subs="quotes"]
 ----
-#Replace the `TestCors` class.#
-`src/test/java/it/io/openliberty/guides/cors/TestCors.java`
+#Replace the `CorsIT` class.#
+`src/test/java/it/io/openliberty/guides/cors/CorsIT.java`
 ----
 
-TestCors.java
+CorsIT.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment;!preflightTest]
+include::finish/src/test/java/it/io/openliberty/guides/cors/CorsIT.java[tags=!comment;!preflightTest]
 ----
 
 The [hotspot=25-33 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
@@ -164,12 +167,9 @@ Expect the following response headers and values if the simple CORS request is s
 | Access-Control-Expose-Headers |  The expected value is `MyHeader`. Indicates that the header `MyHeader` is safe to expose.
 |===
 
-Go to the `start/` directory and run the following command:
+The Open Liberty server was started in development mode at the beginning of the guide and all the changes were automatically picked up.
 
-[role=command]
-----
-mvn install
-----
+Since you started Open Liberty in development mode at the start of the guide, press the enter/return key to run the tests.
 
 The [hotspot=25-33 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
@@ -199,10 +199,10 @@ server.xml
 include::finish/src/main/liberty/config/server.xml[tags=**]
 ----
 
-TestCors.java
+CorsIT.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment]
+include::finish/src/test/java/it/io/openliberty/guides/cors/CorsIT.java[tags=!comment]
 ----
 
 Configure the server to allow the `/configurations/preflight` endpoint to accept a [hotspot=18-23 file=0]`preflight` CORS request.
@@ -232,12 +232,12 @@ The follow attributes were added:
 Save the changes to the [hotspot file=0]`server.xml` file. The `/configurations/preflight` endpoint is now ready to
 be tested with a preflight CORS request.
 
-Add another test to the [hotspot file=1]`TestCors.java` file to test the preflight CORS configuration that you just added:
+Add another test to the [hotspot file=1]`CorsIT.java` file to test the preflight CORS configuration that you just added:
 
 [role="code_command hotspot file=1", subs="quotes"]
 ----
-#Replace the `TestCors` class.#
-`src/test/java/it/io/openliberty/guides/cors/TestCors.java`
+#Replace the `CorsIT` class.#
+`src/test/java/it/io/openliberty/guides/cors/CorsIT.java`
 ----
 
 The [hotspot=36-44 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
@@ -266,12 +266,7 @@ The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
 because the server is configured to allow all origins, and the request came with an origin of
 `anywebsiteyoulike.com`.
 
-Go to the `start/` directory and run the following command:
-
-[role=command]
-----
-mvn install
-----
+Since you started Open Liberty in development mode at the start of the guide, press the enter/return key to run the tests.
 
 The [hotspot=36-44 file=1]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
