--- a/README.adoc
+++ b/README.adoc
@@ -14,6 +14,8 @@
 :page-related-guides: ['rest-intro', 'rest-client-java']
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master/
 :source-highlighter: prettify
+:page-seo-title: Enabling Cross-Origin Resource Sharing (CORS)
+:page-seo-description: A tutorial on how to add two server configurations to enable Cross-Origin Resource Sharing (CORS) and write tests to validate that the CORS configurations work.
 :guide-author: Open Liberty
 = Enabling Cross-Origin Resource Sharing (CORS)
 
